# fastapi-postgres

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_DOCUMENTATION_INDEX.md  AUTHENTICATION_SUMMARY.md  AUTHENTICATION_VISUAL_GUIDE.md  Dockerfile  PERSISTENT_LOGIN_IMPLEMENTATION.md  PRODUCTION_READINESS_AUDIT.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  REFRESH_TOKEN_STORAGE_ANALYSIS.md  SECURITY_IMPLEMENTATION.md  STEP_6_SECURITY_ENHANCEMENTS_COMPLETE.md  alembic.ini  check_fines.py  pyproject.toml  test_fines.py  yaak.maktaba-api-complete-collection.json
.do/: app.yaml
app/: main.py  test_main.py
app/core/: authentication.py  authorization.py  database.py  email.py  error_handling.py  logging.py  middleware.py  monitoring.py  password_policy.py  payments.py  rate_limit.py  security.py  security_headers.py  settings.py  validation.py
app/mocks/: mock_books.json  mock_data.py  mock_items.json  mock_patrons.json  mock_users.json
app/src/jobs/: fines_scheduler.py
app/src/migrations/: env.py
app/src/migrations/versions/: 2025_09_14_2120-c3d335795135_create_catalog_event_table.py  2025_09_15_0158-d0c03574f964_added_catalog_event_array_to_model.py  2025_09_15_0331-cf850a3f7c14_update_enum_column_definition.py  2025_09_16_2152-f4c002573cab_make_due_date_nullable_and_optional.py  (+14 more)
app/src/models/: __init__.py  circulation.py  fines.py  items.py  refresh_tokens.py  users.py
app/src/routes/: auth.py  circulation.py  fines.py  items.py  users.py
app/src/schema/: auth.py  circulation.py  fines.py  items.py  secure_schemas.py  users.py
app/src/scripts/: get_images.py
app/src/tests/: conftest.py  test_auth.py  test_authentication.py  test_circulation.py  test_core_authentication.py  test_core_authorization.py  test_csrf_tokens.py  test_fines.py  test_httponly_cookies.py  test_items.py  test_logout_endpoint.py  test_main.py  test_refresh_endpoint.py  test_refresh_token_model.py  test_refresh_tokens.py  test_users.py  utils.py
docs/: ACTIVATION_EMAIL_RESEND.md  AUTH_ARCHITECTURE_REPORT.md  SECURE_USER_DIFFERENTIATION.md
scripts/: test_rate_limiting_manual.py
supabase/.temp/: pooler-url  project-ref
