[tool.poetry]
name = "fastapi-postgres"
version = "0.1.0"
description = "FastAPI Postgres backend for Maktaba Project"
authors = ["kharibrooksmaye <khari.brooksmaye@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.43"
fastapi = "^0.116.1"
fastapi-cli = "^0.0.11"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.10.1"
python-multipart = "^0.0.20"
greenlet = "^3.2.4"
bcrypt = "^4.3.0"
alembic = {extras = ["tz"], version = "^1.16.5"}
tzdata = "^2025.2"
supabase = "^2.19.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
