[tool.poetry]
name = "fastapi-postgres"
version = "0.1.0"
description = "FastAPI Postgres backend for Maktaba Project"
authors = ["kharibrooksmaye <khari.brooksmaye@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
psycopg = {extras = ["binary"], version = "^3.2.4"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.43"
fastapi = "^0.116.1"
fastapi-cli = "^0.0.11"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.10.1"
python-multipart = "^0.0.20"
greenlet = "^3.2.4"
bcrypt = "^4.3.0"
alembic = {extras = ["tz"], version = "^1.16.5"}
tzdata = "^2025.2"
supabase = "^2.19.0"
requests = "^2.32.5"
uvicorn = "^0.36.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
sqlalchemy-utils = "^0.42.0"
testing-postgresql = "^1.3.0"
covdefaults = "^2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
addopts = [
    "--import-mode=importlib",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
[dependency-groups]
dev = [
    "pytest-postgresql (>=7.0.2,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]

[tool.coverage.run]
  concurrency = ["thread", "greenlet"]
  plugins = ["covdefaults"]
